terraform/c9-vnet-and-nsg.tf
resource "azurerm_virtual_network" "vnet" {
    name = "myVnet"
    location = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name
    address_space = [ "10.0.0.0/16" ]
}

resource "azurerm_subnet" "mysubnet" {
    name = "mySubnet"
    virtual_network_name =  azurerm_virtual_network.vnet.name
    resource_group_name =   azurerm_resource_group.rg.name
    address_prefixes = ["10.0.1.0/24"]
}

resource "azurerm_network_security_group" "mynsg" {
    name = "myNSG"
    resource_group_name = azurerm_resource_group.rg.name
    location = azurerm_resource_group.rg.location  

  security_rule {
    name                       = "Allow-SSH"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "Allow-HTTP"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "8080"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_network_interface_security_group_association" "nic-association" {
    count = var.vm_count
  network_interface_id      = azurerm_network_interface.mynic[count.index].id
  network_security_group_id = azurerm_network_security_group.mynsg.id
}
